---- Ethna_Plugin_Validator_StrMinCompat.php (2.3.x までの互換性確保用)
-- 内部エンコーディングの変更に伴う動作の変更
--- Ethna_Plugin_Validator_Mbregexp のデフォルトのエンコーディングは、クライアントエンコーディングが仮定されます。デフォルトはUTF-8です。
- 国際化 (i18n) のための機能追加および変更
-- [Breaking B.C] 言語名として解釈していた部分をロケール名に変更
--- これにより、[appid]template/ja, [appid]/locale/ja の「ja」の部分が ja_JP に置き換わります。よって、古いバージョンから移行する場合はディレクトリ名の変更が必要です。
--- Ethna.php で定義されていた、LANG_JA, LANG_EN はこの変更により使用されないので削除
-- [Breaking B.C] gettext を使用する際には [appid]/etc/[appid]-ini.php で 'use_gettext' => true と設定しないと gettext を使わないようにした
--- 2.3.5 までのコードは、gettext.so がロードされていれば *無条件に* gettext が実行されるようになっているので、Ethna 独自のメッセージカタログとの選択がわかりづらいため。
--- 2.3.5までのコードで gettext を利用している場合は、設定が明示的に必要です。
-- "ethna add-project" コマンドに [-l|--locale] [-e|--encoding] オプションを追加
-  "ethna add-[view|templete]" コマンドに [-l|--locale] [-e|--encoding] オプションを追加
-- スケルトンの日本語コメントをすべてASCIIに変更(好みのエンコーディングで編集できるようにするため)
-- gettextを使わない場合向けに、Ethna独自のメッセージカタログを実装
--- ini ファイルライクなフォーマットで msgid と翻訳を格納する方式
--- Ethna_I18N#setLanguage で出力ロケールの切り替えも可能
- [Breaking B.C] レンタルサーバを考慮して、[appid]_Controllerの include_path を、[appid]/lib を優先するように変更
-- include_path の順番に依存するコードは少ないとは思いますが、移行の際は注意すべきです。
- "ethna add-project" コマンドに [-s|skeldir] オプションを追加
-- 指定されたスケルトンディレクトリに、ETHNA_HOME/skel と同じファイル名のものが存在する場合はそちら
   を優先した上で、ETHNA_HOME/skel にないファイルは [appid]/skel にコピーする
- [Breaking B.C] Ethna_ActionForm のバリデータは、プラグインのものしか使用しなくなりました。
-- Ethna_ActionForm, [Appid]ActionForm の use_validator_plugin 変数を削除

*** bug fixes

- tpl/info.tpl のタグミスを修正
- smarty_modifier_plugin が配列の場合に、プラグインとして登録されないバグを修正
- フォームヘルパでセレクトボックスの配列フォームを作ると値が保持されない点を修正 (ethna-users:0868)
- smarty_modifier_select の戻り値が、諸々のHTML標準と異なっていたバグを修正(thanks: maru_cc)
-- selected="true" -> selected="selected"
- アプリケーションIDの始めの文字に数値を許していたバグを修正
-- クラス名のprefixになるため、数値を許すと自動生成物がコンパイルエラーを起こす
- Ethna_Util#getRandom で open_basedir が有効な場合に、 /proc を開けず警告が出る点を回避(thanks. sotarok)
-- http://d.hatena.ne.jp/sotarok/20070813/1187055110