@@ -129,6 +129,7 @@ class Ethna_ViewClass
     {
         $renderer =& $this->_getRenderer();
         $this->_setDefault($renderer);
+        $this->_setLanguage();
         $renderer->perform($this->forward_path);
     }
     // }}}
@@ -955,6 +956,19 @@ class Ethna_ViewClass
      *  @param  object  Ethna_Renderer  レンダラオブジェクト
      */
     function _setDefault(&$renderer)
+    {
+    }
+    // }}}
+
+    // {{{ _setLanguage
+    /**
+     *  言語設定を設定する。
+     *  アクションフォームやCookieの値等で、テンプレートや言語設定
+     *  を切り替えたい場合にオーバーライドしてください。
+     *
+     *  @access protected
+     */
+    function _setLanguage()
     {
     }
     // }}}
